--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-Bold.woff2') format('woff2'),
-        url('Metropolis-Bold.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-Bold.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-BoldItalic.woff2') format('woff2'),
-        url('Metropolis-BoldItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-BoldItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-Black.woff2') format('woff2'),
-        url('Metropolis-Black.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-Black.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-BlackItalic.woff2') format('woff2'),
-        url('Metropolis-BlackItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-BlackItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-BlackItalic.woff') format('woff');
     font-weight: 900;
     font-style: italic;
     font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-LightItalic.woff2') format('woff2'),
-        url('Metropolis-LightItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-LightItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-LightItalic.woff') format('woff');
     font-weight: 300;
     font-style: italic;
     font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'Metropolis Semi';
-    src: url('Metropolis-SemiBoldItalic.woff2') format('woff2'),
-        url('Metropolis-SemiBoldItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-SemiBoldItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-SemiBoldItalic.woff') format('woff');
     font-weight: 600;
     font-style: italic;
     font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-MediumItalic.woff2') format('woff2'),
-        url('Metropolis-MediumItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-MediumItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-MediumItalic.woff') format('woff');
     font-weight: 500;
     font-style: italic;
     font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
     font-family: 'Metropolis Extra';
-    src: url('Metropolis-ExtraBold.woff2') format('woff2'),
-        url('Metropolis-ExtraBold.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-ExtraBold.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-ExtraBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -72,8 +72,8 @@
 
 @font-face {
     font-family: 'Metropolis Extra';
-    src: url('Metropolis-ExtraLightItalic.woff2') format('woff2'),
-        url('Metropolis-ExtraLightItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-ExtraLightItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-ExtraLightItalic.woff') format('woff');
     font-weight: 200;
     font-style: italic;
     font-display: swap;
@@ -81,7 +81,7 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-Light.woff2') format('woff2'),
+    src: url('../../assets/fonts/Metropolis-Light.woff2') format('woff2'),
         url('Metropolis-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
@@ -90,8 +90,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-ThinItalic.woff2') format('woff2'),
-        url('Metropolis-ThinItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-ThinItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-ThinItalic.woff') format('woff');
     font-weight: 100;
     font-style: italic;
     font-display: swap;
@@ -99,8 +99,8 @@
 
 @font-face {
     font-family: 'Metropolis Semi';
-    src: url('Metropolis-SemiBold.woff2') format('woff2'),
-        url('Metropolis-SemiBold.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-SemiBold.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -108,8 +108,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-Medium.woff2') format('woff2'),
-        url('Metropolis-Medium.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-Medium.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -117,8 +117,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-Regular.woff2') format('woff2'),
-        url('Metropolis-Regular.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-Regular.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -126,8 +126,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-RegularItalic.woff2') format('woff2'),
-        url('Metropolis-RegularItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-RegularItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-RegularItalic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -135,8 +135,8 @@
 
 @font-face {
     font-family: 'Metropolis Extra';
-    src: url('Metropolis-ExtraLight.woff2') format('woff2'),
-        url('Metropolis-ExtraLight.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-ExtraLight.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-ExtraLight.woff') format('woff');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -144,8 +144,8 @@
 
 @font-face {
     font-family: 'Metropolis';
-    src: url('Metropolis-Thin.woff2') format('woff2'),
-        url('Metropolis-Thin.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-Thin.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -153,8 +153,8 @@
 
 @font-face {
     font-family: 'Metropolis Extra';
-    src: url('Metropolis-ExtraBoldItalic.woff2') format('woff2'),
-        url('Metropolis-ExtraBoldItalic.woff') format('woff');
+    src: url('../../assets/fonts/Metropolis-ExtraBoldItalic.woff2') format('woff2'),
+        url('../../assets/fonts/Metropolis-ExtraBoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
