--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -584,6 +584,7 @@ textarea {
   color: #FFF;
   text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   font-size: 16px;
+  margin-bottom: 0;
 }
 .application-img-area {
   max-width: 1120px;
